optimize glue selection computation